@@ -63,6 +63,7 @@ v16.0.00
 		Messenger: added ability for uses with Manage Messages_all to resend on behalf of others
 		Planner: fixed module name substitution in links in Lesson Planner
 		Planner: added Smart Blocks tab to Unit Overview in Lesson Planner
+		Planner: added indexes to gibbonLike database table to improve performance
 		Staff: fixed bug in paramater passing in Add in Manage Staff
 		Students: added sibling and family information to Letters Home by Roll Group
 		Students: added Comment field to medical form, linked to student application form.
